--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/Irinakoli/projects-rep/blob/main/sentiment_analysis_Cyprus.ipynb" class="link">Trip Advisor reviews - sentiment analysis</a></h3>
+										<h3><a href="https://github.com/Irinakoli/Irinakoli.github.io/blob/main/sentiment_analysis_Cyprus.ipynb" class="link">Trip Advisor reviews - sentiment analysis</a></h3>
 										<p>Sentiment classifcation - BERT, Vader, TextBlob <br \>
 										Emotion detection - Ekman model <br \>
 									Text exploration - most frequent POS, Wordcloud <br \>
@@ -78,7 +78,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/Irinakoli/projects-rep/blob/main/final_bank_churn%20(1).ipynb" class="link">Bank churn | classification</a></h3>
+										<h3><a href="https://github.com/Irinakoli/Irinakoli.github.io/blob/main/final_bank_churn%20(1).ipynb" class="link">Bank churn | classification</a></h3>
 										<p>The project aims to classify whether a person with certain features is likely <br \>
 										to give up on bank services or to remain a loyal customer. <br \>
 									Random Forest Classifier - 95% accuracy</p>
@@ -89,7 +89,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/Irinakoli/projects-rep/blob/main/Sleep_disorder_classification.ipynb" class="link">Sleep disorder | classification</a></h3>
+										<h3><a href="https://github.com/Irinakoli/Irinakoli.github.io/blob/main/Sleep_disorder_classification.ipynb" class="link">Sleep disorder | classification</a></h3>
 										<p>The project goal is to train a classifier to assign a person to particular or none <br \>
 										sleeping disorder. The data exploratory analysis is quite extensive, plotting together <br \>
 									features and target variables. The motivation for Decision Tree Classifier was explained - plot_tree. </p>
@@ -100,7 +100,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/Irinakoli/projects-rep/blob/main/Linear%20Regression%20(1).ipynb" class="link">House price prediction | linear regression</a></h3>
+										<h3><a href="https://github.com/Irinakoli/Irinakoli.github.io/blob/main/Linear%20Regression%20(1).ipynb" class="link">House price prediction | linear regression</a></h3>
 										<p>A popular Kaggle California dataset was used in order to predict the price. <br \>
 										The linear model was explained by feature importance plot, Shap, LIME. </p>
 									</header>
@@ -110,7 +110,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/Irinakoli/projects-rep/blob/main/spam_detection%20(1).ipynb" class="link">Spam detection | classification</a></h3>
+										<h3><a href="https://github.com/Irinakoli/Irinakoli.github.io/blob/main/spam_detection%20(1).ipynb" class="link">Spam detection | classification</a></h3>
 										<p>The project aims to detect the YouTube reviews being an actual spam and to <br \>
 										pin point the words making the text corpus prone to be classified as a spam.</p>
 									</header>
